--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env $(cat .env) nodemon index.js",
+    "start": "node index.js",
+    "dev": "env $(cat .env) nodemon index.js",
+    "docker:build": "docker build -t nakaz/better-bus-api:1.0.0 .",
+    "docker:run": "docker run -d --name better-bus-api -it -p 8080:3000 --env-file .env nakaz/better-bus-api:1.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
